# SW-mail-quoter

./: .gitignore  README.md  __init__.py  cli.py  main.py  model.py  pyproject.toml  requirements.txt
commands/: db.py  mail.py  proc.py  reply.py
core/: __init__.py  client.py  context.py  excel.py  handler.py  parser.py  schemas.py  utils.py
db/: decorator.py  engine.py  enums.py  models.py  session.py  setup.py
models/: model.py  schemas.py
processor/: base.py  mapping.py  registry.py
processor/customer/: cbg.py
processor/impl/: cbg.py
scripts/: README.md  init.bat  install_uv.bat  run.bat
util/: mail_content_parser.py  parser.py
