[project]
name = "sw-mail-quoter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.1.8",
    "lxml>=5.4.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.41",
    "xlwings==0.31.10",
]

[dependency-groups]
dev = [
    "setuptools>=75.3.2",
]

[project.scripts]
sw-quoter = "cli:cli"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "db", "processor"]
py-modules = ["cli"]
